--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
 @charset "UTF-8";
 
-* {
+*,
+*:before,
+*:after {
 	outline: 					none;
 	-webkit-box-sizing: 		border-box;
 	-moz-box-sizing: 			border-box;
@@ -21,6 +23,57 @@ body {
 a {
 	color: 						inherit;
 	text-decoration:  			none;
+}
+
+/* TOOLTIPS */
+[data-tooltip] {
+	position: 					relative;
+	cursor: 					pointer;
+}
+
+[data-tooltip]:before,
+[data-tooltip]:after {
+	transition: 				.15s opacity ease;
+	opacity: 					0;
+	pointer-events: 			none;
+}
+
+[data-tooltip]:before {
+	position: 					absolute;
+	bottom: 					150%;
+	left: 						50%;
+	margin-bottom: 				5px;
+	margin-left: 				-80px;
+	padding: 					7px;
+	width: 						160px;
+	border-radius:         		3px;
+	background-color: 			black;
+	background-color: 			hsla(0, 0%, 20%, 0.9);
+	color: 						#fff;
+	content: 					attr(data-tooltip);
+	text-align: 				center;
+	font-size: 					14px;
+	line-height: 				1.2;
+}
+
+[data-tooltip]:after {
+	position: 					absolute;
+	bottom: 					150%;
+	left: 						50%;
+	margin-left: 				-5px;
+	width: 						0;
+	border-top: 				5px solid #000;
+	border-top: 				5px solid hsla(0, 0%, 20%, 0.9);
+	border-right: 				5px solid transparent;
+	border-left: 				5px solid transparent;
+	content: 					" ";
+	font-size: 					0;
+	line-height: 				0;
+}
+
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+	opacity: 					1;
 }
 
 /* INLINE MENUS */
@@ -406,73 +459,6 @@ i:hover > .inline_menu {
 	font-size: 					15px;
 }
 
-@media only screen and ( min-width: 650px ) {
-
-	#wrapper > #login > #header {
-		font-size: 					22px;
-	}
-
-	#wrapper > #login {
-		margin: 					200px auto 0;
-	}
-
-	#wrapper > #login > #connect > form > input[type="submit"] {
-		max-width: 					150px;
-		margin: 					5px 0 0 auto;
-	}
-
-
-	#wrapper > #menu > #logo {
-		color: 				 		inherit;
-	}
-
-	#wrapper > #content.choose {
-		border-radius: 				80px;
-	}
-
-	#wrapper > #content .courses:first-child {
-		flex-basis: 				70px;
-		border-top-left-radius: 	80px;
-		border-bottom-left-radius: 	80px;
-	}
-	#wrapper > #content .courses:last-child {
-		flex-basis: 				75px;
-		border-top-right-radius: 	80px;
-		border-bottom-right-radius: 80px;
-		background-position: 		-5px -340px;
-	}
-	#lessons > #content,
-	#lessons > #content > #container {
-		border-bottom-left-radius: 	0;
-	}
-
-	#lessons > #content {
-		flex-direction: 			row;
-	}
-
-	#lessons > #breadcrumbs {
-		line-height:  				40px;
-		font-size: 					24px;
-	}
-	#lessons > #content > #available {
-		flex: 						1 0 240px;
-		max-width:  				240px;
-		width: 						-moz-min-content;
-		width: 						-webkit-min-content;
-		width: 						min-content;
-		border-bottom-right-radius:	0;
-	}
-	#lessons > #content > #available.selected {
-		display:  					flex;
-	}
-	#lessons > #content > #container.error {
-		display:  					block;
-	}
-
-	#account > .group > .title {
-		font-size: 					30px;
-	}
-}
 
 #wrapper > #chat {
 	width: 						80%;
@@ -566,4 +552,74 @@ i:hover > .inline_menu {
 	left: 						100%;
 	border-color: 				transparent;
 	border-left-color: 			rgba(241, 255, 214, 0.19);
+}
+
+
+
+@media only screen and ( min-width: 650px ) {
+
+	#wrapper > #login > #header {
+		font-size: 					22px;
+	}
+
+	#wrapper > #login {
+		margin: 					200px auto 0;
+	}
+
+	#wrapper > #login > #connect > form > input[type="submit"] {
+		max-width: 					150px;
+		margin: 					5px 0 0 auto;
+	}
+
+
+	#wrapper > #menu > #logo {
+		color: 				 		inherit;
+	}
+
+	#wrapper > #content.choose {
+		border-radius: 				80px;
+	}
+
+	#wrapper > #content .courses:first-child {
+		flex-basis: 				70px;
+		border-top-left-radius: 	80px;
+		border-bottom-left-radius: 	80px;
+	}
+	#wrapper > #content .courses:last-child {
+		flex-basis: 				75px;
+		border-top-right-radius: 	80px;
+		border-bottom-right-radius: 80px;
+		background-position: 		-5px -340px;
+	}
+	#lessons > #content,
+	#lessons > #content > #container {
+		border-bottom-left-radius: 	0;
+	}
+
+	#lessons > #content {
+		flex-direction: 			row;
+	}
+
+	#lessons > #breadcrumbs {
+		line-height:  				40px;
+		font-size: 					24px;
+	}
+	#lessons > #content > #available {
+		flex: 						1 0 240px;
+		max-width:  				240px;
+		width: 						-moz-min-content;
+		width: 						-webkit-min-content;
+		width: 						min-content;
+		border-bottom-right-radius:	0;
+	}
+	#lessons > #content > #available.selected {
+		display:  					flex;
+	}
+	#lessons > #content > #container.error {
+		display:  					block;
+	}
+
+	#account > .group > .title {
+		font-size: 					30px;
+	}
 }
